--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -5187,7 +5187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "id": "394e3fbe",
    "metadata": {},
    "outputs": [],
@@ -5206,7 +5206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 243,
    "id": "8b3f6d78",
    "metadata": {},
    "outputs": [],
@@ -5216,8 +5216,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cbbe1beb",
+   "execution_count": 244,
+   "id": "fab628ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def pick_child(node):\n",
+    "    children = node.get_children()\n",
+    "    probabilities = [child.probability / child.N for child in children]\n",
+    "    total_prob = sum(probabilities).item()\n",
+    "\n",
+    "    rand_val = random.uniform(0, total_prob)\n",
+    "\n",
+    "    cumulative_probs = []\n",
+    "    current_sum = 0\n",
+    "    for prob in probabilities:\n",
+    "        current_sum += prob.item()\n",
+    "        cumulative_probs.append(current_sum)\n",
+    "\n",
+    "    for i, cumulative in enumerate(cumulative_probs):\n",
+    "        if rand_val <= cumulative:\n",
+    "            return children[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 245,
+   "id": "1cf00be5",
    "metadata": {},
    "outputs": [
     {
@@ -5231,12 +5258,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming (Prob: 1.0)\n",
-      "  the (Prob: 0.24344351887702942)\n",
-      "  our (Prob: 0.10716792196035385)\n",
-      "  itself (Prob: 0.04312271997332573)\n",
-      "  into (Prob: 0.02902885712683201)\n",
-      "  society (Prob: 0.02544199302792549)\n"
+      "Artificial Intelligence is transforming the\n",
+      "Artificial Intelligence is transforming our\n",
+      "Artificial Intelligence is transforming itself\n",
+      "Artificial Intelligence is transforming into\n",
+      "Artificial Intelligence is transforming society\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mputo/miniconda3/envs/deeplearning/lib/python3.11/site-packages/torch/nn/modules/module.py:1775: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming the way\n",
+      "Artificial Intelligence is transforming the world\n",
+      "Artificial Intelligence is transforming the lives\n",
+      "Artificial Intelligence is transforming the field\n",
+      "Artificial Intelligence is transforming the future\n"
      ]
     },
     {
@@ -5250,8 +5296,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the society in general] which we see so much of the power of the monarchy as that which comes from certain individuals which have not yet acquired any authority, yet come, in their turn, to do with and to defend the government that the state itself is set up for their own benefit. And we have already seen that\n",
-      "0.04259742796421051\n"
+      "Artificial Intelligence is transforming the way we\n",
+      "Artificial Intelligence is transforming the way people\n",
+      "Artificial Intelligence is transforming the way you\n",
+      "Artificial Intelligence is transforming the way our\n",
+      "Artificial Intelligence is transforming the way the\n"
      ]
     },
     {
@@ -5265,12 +5314,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "our society and the work environment in a way that benefits the development of the young.\n",
-      "\n",
-      "\"Our approach to working with this group is to work with our people and partners actively because they have to.\"\n",
-      "\n",
-      "The group plans on \"making the transition of people to work with the council in a strong and positive way\n",
-      "0.0535760372877121\n"
+      "Artificial Intelligence is transforming the way we think\n",
+      "Artificial Intelligence is transforming the way we live\n",
+      "Artificial Intelligence is transforming the way we interact\n",
+      "Artificial Intelligence is transforming the way we work\n",
+      "Artificial Intelligence is transforming the way we do\n"
      ]
     },
     {
@@ -5284,8 +5332,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "itself society's role as political class\" is to \"end all revolutions through collective action. So far, it's largely failed,\" she says. On Tuesday, in an apparent attempt to quell the tide of discontent, the organizers of the protests in Ferguson, Mo. agreed to let go the head of The Nation\n",
-      "0.07577010989189148\n"
+      "Artificial Intelligence is transforming into a\n",
+      "Artificial Intelligence is transforming into an\n",
+      "Artificial Intelligence is transforming into something\n",
+      "Artificial Intelligence is transforming into the\n",
+      "Artificial Intelligence is transforming into AI\n"
      ]
     },
     {
@@ -5299,43 +5350,174 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "into society with an almost supernatural appeal. But how do you get the feeling?\n",
-      "\n",
-      "A few different approaches are employed. The first involves applying what comes to mind to one's life, using what people think to get the desired message from your life and life style. For instance: \"Are you in a good mood\n",
-      "0.1272422820329666\n",
-      "society society\" as the \"true social system,\" and was known only as \"the political order that operates in the country and its institutions.\" To that end, these institutions were created by the elites, not by democracy.\n",
-      "\n",
-      "However, the ideology also produced a sense of moral purity, with respect to the \"\n",
-      "0.027911413460969925\n"
+      "Artificial Intelligence is transforming our lives\n",
+      "Artificial Intelligence is transforming our world\n",
+      "Artificial Intelligence is transforming our daily\n",
+      "Artificial Intelligence is transforming our everyday\n",
+      "Artificial Intelligence is transforming our society\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming into a new\n",
+      "Artificial Intelligence is transforming into a powerful\n",
+      "Artificial Intelligence is transforming into a technology\n",
+      "Artificial Intelligence is transforming into a field\n",
+      "Artificial Intelligence is transforming into a world\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming into a new field\n",
+      "Artificial Intelligence is transforming into a new kind\n",
+      "Artificial Intelligence is transforming into a new form\n",
+      "Artificial Intelligence is transforming into a new type\n",
+      "Artificial Intelligence is transforming into a new breed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming society .,\n",
+      "Artificial Intelligence is transforming society and\n",
+      "Artificial Intelligence is transforming society into\n",
+      "Artificial Intelligence is transforming society in\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming the world .,\n",
+      "Artificial Intelligence is transforming the world of\n",
+      "Artificial Intelligence is transforming the world and\n",
+      "Artificial Intelligence is transforming the world in\n"
      ]
     }
    ],
    "source": [
-    "logits = generate_next_token(tree.root.state)\n",
-    "decoded, probs = get_words(logits)\n",
+    "rollouts = 10\n",
     "\n",
-    "for i, item in enumerate(decoded.split()):\n",
-    "    tree.root.add_child(Node(item, probs[i]))\n",
+    "for rollout in range(rollouts):\n",
+    "    node = tree.root\n",
     "\n",
-    "tree.print_tree()\n",
+    "    while len(node.get_children()) > 0:\n",
+    "        node = pick_child(node)\n",
     "\n",
-    "for child in tree.root.children:\n",
-    "    text = child.state\n",
-    "    generated = text + \" \" + item\n",
+    "    logits = generate_next_token(node.state)\n",
+    "    decoded, probs = get_words(logits)\n",
     "\n",
-    "    d = generator(generated, max_length=64)\n",
-    "    \n",
-    "    val = d[0]['generated_text']\n",
+    "    for i, next_word in enumerate(decoded.split()):\n",
+    "        print(node.state + \" \" + next_word)\n",
+    "        node.add_child(Node(node.state + \" \" + next_word, probs[i]))\n",
+    "\n",
+    "    d = generator(text, max_length=64)\n",
     "\n",
     "    softmax = nn.Softmax()\n",
     "\n",
     "    probs = softmax(predict(val))[0][0].item()\n",
     "\n",
-    "    child.probability += probs\n",
-    "    child.N += 1\n",
-    "\n",
-    "    print(val)\n",
-    "    print(probs)\n"
+    "    node.probability += probs\n",
+    "    node.N += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc7525f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Artificial Intelligence is transforming (Prob: 0.6401749104261398)\n",
+      "  Artificial Intelligence is transforming the (Prob: 0.26146137714385986)\n",
+      "    Artificial Intelligence is transforming the way (Prob: 0.2636590003967285)\n",
+      "      Artificial Intelligence is transforming the way we (Prob: 0.4143906831741333)\n",
+      "        Artificial Intelligence is transforming the way we think (Prob: 0.33351418375968933)\n",
+      "        Artificial Intelligence is transforming the way we live (Prob: 0.08985525369644165)\n",
+      "        Artificial Intelligence is transforming the way we interact (Prob: 0.07239433377981186)\n",
+      "        Artificial Intelligence is transforming the way we work (Prob: 0.054217126220464706)\n",
+      "        Artificial Intelligence is transforming the way we do (Prob: 0.028207847848534584)\n",
+      "      Artificial Intelligence is transforming the way people (Prob: 0.09717890620231628)\n",
+      "      Artificial Intelligence is transforming the way you (Prob: 0.03332684561610222)\n",
+      "      Artificial Intelligence is transforming the way our (Prob: 0.026981079950928688)\n",
+      "      Artificial Intelligence is transforming the way the (Prob: 0.023998934775590897)\n",
+      "    Artificial Intelligence is transforming the world (Prob: 0.24973800778388977)\n",
+      "      Artificial Intelligence is transforming the world ., (Prob: 0.2612598240375519)\n",
+      "      Artificial Intelligence is transforming the world of (Prob: 0.13652263581752777)\n",
+      "      Artificial Intelligence is transforming the world and (Prob: 0.09788894653320312)\n",
+      "      Artificial Intelligence is transforming the world in (Prob: 0.051104769110679626)\n",
+      "    Artificial Intelligence is transforming the lives (Prob: 0.0208636112511158)\n",
+      "    Artificial Intelligence is transforming the field (Prob: 0.012574538588523865)\n",
+      "    Artificial Intelligence is transforming the future (Prob: 0.011371249333024025)\n",
+      "  Artificial Intelligence is transforming our (Prob: 0.19353961944580078)\n",
+      "    Artificial Intelligence is transforming our lives (Prob: 0.42491206526756287)\n",
+      "    Artificial Intelligence is transforming our world (Prob: 0.0857236236333847)\n",
+      "    Artificial Intelligence is transforming our daily (Prob: 0.04022355377674103)\n",
+      "    Artificial Intelligence is transforming our everyday (Prob: 0.034394532442092896)\n",
+      "    Artificial Intelligence is transforming our society (Prob: 0.026844795793294907)\n",
+      "  Artificial Intelligence is transforming itself (Prob: 0.04312271997332573)\n",
+      "  Artificial Intelligence is transforming into (Prob: 0.1570441722869873)\n",
+      "    Artificial Intelligence is transforming into a (Prob: 0.3466618061065674)\n",
+      "      Artificial Intelligence is transforming into a new (Prob: 0.16527792811393738)\n",
+      "        Artificial Intelligence is transforming into a new field (Prob: 0.08647748082876205)\n",
+      "        Artificial Intelligence is transforming into a new kind (Prob: 0.07125556468963623)\n",
+      "        Artificial Intelligence is transforming into a new form (Prob: 0.0674886405467987)\n",
+      "        Artificial Intelligence is transforming into a new type (Prob: 0.04115123674273491)\n",
+      "        Artificial Intelligence is transforming into a new breed (Prob: 0.03800412267446518)\n",
+      "      Artificial Intelligence is transforming into a powerful (Prob: 0.018260017037391663)\n",
+      "      Artificial Intelligence is transforming into a technology (Prob: 0.016480827704072)\n",
+      "      Artificial Intelligence is transforming into a field (Prob: 0.015622315928339958)\n",
+      "      Artificial Intelligence is transforming into a world (Prob: 0.01503908634185791)\n",
+      "    Artificial Intelligence is transforming into an (Prob: 0.09982182085514069)\n",
+      "    Artificial Intelligence is transforming into something (Prob: 0.09206827729940414)\n",
+      "    Artificial Intelligence is transforming into the (Prob: 0.08220333606004715)\n",
+      "    Artificial Intelligence is transforming into AI (Prob: 0.017550906166434288)\n",
+      "  Artificial Intelligence is transforming society (Prob: 0.16539843380451202)\n",
+      "    Artificial Intelligence is transforming society ., (Prob: 0.21610695123672485)\n",
+      "    Artificial Intelligence is transforming society and (Prob: 0.1698250025510788)\n",
+      "    Artificial Intelligence is transforming society into (Prob: 0.1053028330206871)\n",
+      "    Artificial Intelligence is transforming society in (Prob: 0.06295455992221832)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree.print_tree()"
    ]
   }
  ],
