fixed bug in code

--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -5553,7 +5553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 294,
    "id": "fdf966c3",
    "metadata": {},
    "outputs": [],
@@ -5571,7 +5571,7 @@
     "        for i, next_word in enumerate(decoded.split()):\n",
     "            node.add_child(Node(node, node.state + \" \" + next_word, probs[i]))\n",
     "\n",
-    "        d = generator(text, max_length=64)\n",
+    "        val = generator(text, max_length=64)[0]['generated_text']\n",
     "\n",
     "        softmax = nn.Softmax()\n",
     "\n",
@@ -5585,7 +5585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 295,
    "id": "124b2222",
    "metadata": {},
    "outputs": [],
@@ -5604,7 +5604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 297,
    "id": "c7a7c210",
    "metadata": {},
    "outputs": [
@@ -5613,8 +5613,6 @@
      "output_type": "stream",
      "text": [
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
-      "/home/mputo/miniconda3/envs/deeplearning/lib/python3.11/site-packages/torch/nn/modules/module.py:1775: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  return self._call_impl(*args, **kwargs)\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
@@ -5700,7 +5698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think\n"
+      "Artificial Intelligence is transforming the way we live\n"
      ]
     },
     {
@@ -5723,7 +5721,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about\n"
+      "Artificial Intelligence is transforming the way we live our\n"
      ]
     },
     {
@@ -5746,7 +5744,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the\n"
+      "Artificial Intelligence is transforming the way we live our lives\n"
      ]
     },
     {
@@ -5769,7 +5767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the world\n"
+      "Artificial Intelligence is transforming the way we live our lives .,\n"
      ]
     },
     {
@@ -5792,7 +5790,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the world .,\n"
+      "Artificial Intelligence is transforming the way we live our lives ., the\n"
      ]
     },
     {
@@ -5815,7 +5813,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the world ., and\n"
+      "Artificial Intelligence is transforming the way we live our lives ., the world\n"
      ]
     },
     {
@@ -5837,7 +5835,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the world ., and it\n"
+      "Artificial Intelligence is transforming the way we live our lives ., the world around's\n"
      ]
     }
    ],
@@ -5854,7 +5852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 298,
    "id": "12530f9e",
    "metadata": {},
    "outputs": [
@@ -5862,7 +5860,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we think about the world ., and it\n"
+      "Artificial Intelligence is transforming the way we live our lives ., the world around's\n"
      ]
     }
    ],
