--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -5585,13 +5585,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 307,
    "id": "124b2222",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_max_child(node):\n",
-    "    max_child = tree.root\n",
+    "    max_child = node\n",
     "    max_prob = -1\n",
     "\n",
     "    for child in tree.root.children:\n",
@@ -5604,7 +5604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 308,
    "id": "c7a7c210",
    "metadata": {},
    "outputs": [
@@ -5613,6 +5613,8 @@
      "output_type": "stream",
      "text": [
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "/home/mputo/miniconda3/envs/deeplearning/lib/python3.11/site-packages/torch/nn/modules/module.py:1775: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  return self._call_impl(*args, **kwargs)\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
@@ -5629,7 +5631,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the\n"
+      "United States is a\n"
      ]
     },
     {
@@ -5652,7 +5654,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way\n"
+      "United States is a nation\n"
      ]
     },
     {
@@ -5675,7 +5677,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we\n"
+      "United States is a nation of\n"
      ]
     },
     {
@@ -5698,7 +5700,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live\n"
+      "United States is a nation of people\n"
      ]
     },
     {
@@ -5721,7 +5723,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our\n"
+      "United States is a nation of people who,.\n"
      ]
     },
     {
@@ -5744,7 +5746,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives\n"
+      "United States is a nation of people who,. We\n"
      ]
     },
     {
@@ -5767,7 +5769,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives .,\n"
+      "United States is a nation of people who,. We have\n"
      ]
     },
     {
@@ -5790,7 +5792,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives ., the\n"
+      "United States is a nation of people who,. We have a\n"
      ]
     },
     {
@@ -5813,7 +5815,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives ., the world\n"
+      "United States is a nation of people who,. We have a strong\n"
      ]
     },
     {
@@ -5835,12 +5837,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives ., the world around's\n"
+      "United States is a nation of people who,. We have a strong tradition,\n"
      ]
     }
    ],
    "source": [
-    "tree = Tree(Node(None, \"Artificial Intelligence is transforming\", 1.0))\n",
+    "tree = Tree(Node(None, \"United States is\", 1.0))\n",
     "\n",
     "for i in range(10):\n",
     "    search(tree, rollout=10)\n",
@@ -5852,7 +5854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 309,
    "id": "12530f9e",
    "metadata": {},
    "outputs": [
@@ -5860,7 +5862,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Artificial Intelligence is transforming the way we live our lives ., the world around's\n"
+      "United States is a nation of people who,. We have a strong tradition,\n"
      ]
     }
    ],
