--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -5604,7 +5604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 310,
    "id": "c7a7c210",
    "metadata": {},
    "outputs": [
@@ -5613,8 +5613,6 @@
      "output_type": "stream",
      "text": [
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
-      "/home/mputo/miniconda3/envs/deeplearning/lib/python3.11/site-packages/torch/nn/modules/module.py:1775: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
-      "  return self._call_impl(*args, **kwargs)\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
       "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
@@ -5631,7 +5629,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a\n"
+      "Happy customer experience!\n"
      ]
     },
     {
@@ -5654,7 +5652,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation\n"
+      "Happy customer experience! I\n"
      ]
     },
     {
@@ -5677,7 +5675,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of\n"
+      "Happy customer experience! I was\n"
      ]
     },
     {
@@ -5700,7 +5698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people\n"
+      "Happy customer experience! I was pleasantly\n"
      ]
     },
     {
@@ -5723,7 +5721,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,.\n"
+      "Happy customer experience! I was pleasantly surprised\n"
      ]
     },
     {
@@ -5746,7 +5744,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We\n"
+      "Happy customer experience! I was pleasantly surprised by\n"
      ]
     },
     {
@@ -5769,7 +5767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We have\n"
+      "Happy customer experience! I was pleasantly surprised by the\n"
      ]
     },
     {
@@ -5792,7 +5790,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We have a\n"
+      "Happy customer experience! I was pleasantly surprised by the quality\n"
      ]
     },
     {
@@ -5815,7 +5813,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We have a strong\n"
+      "Happy customer experience! I was pleasantly surprised by the quality of\n"
      ]
     },
     {
@@ -5837,12 +5835,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We have a strong tradition,\n"
+      "Happy customer experience! I was pleasantly surprised by the quality of their\n"
      ]
     }
    ],
    "source": [
-    "tree = Tree(Node(None, \"United States is\", 1.0))\n",
+    "tree = Tree(Node(None, \"Happy customer\", 1.0))\n",
     "\n",
     "for i in range(10):\n",
     "    search(tree, rollout=10)\n",
@@ -5854,7 +5852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 311,
    "id": "12530f9e",
    "metadata": {},
    "outputs": [
@@ -5862,12 +5860,190 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "United States is a nation of people who,. We have a strong tradition,\n"
+      "Happy customer experience! I was pleasantly surprised by the quality of their\n"
      ]
     }
    ],
    "source": [
     "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "bf094ade",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mputo/miniconda3/envs/deeplearning/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Llama 3.2 Logits Shape: torch.Size([1, 10, 128256])\n",
+      "Logits for the first prediction token shape: torch.Size([128256])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "# --- STEP 1: Load Llama 3.2 Model ---\n",
+    "# Use a public model name for Llama 3.2. Let's use the 3B Instruct version as an example.\n",
+    "model_id = \"meta-llama/Llama-3.2-1B-Instruct\" \n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
+    "# Use 'device_map=\"auto\"' to handle large models efficiently\n",
+    "model = AutoModelForCausalLM.from_pretrained(\n",
+    "    model_id,\n",
+    "    torch_dtype=torch.bfloat16, # Recommended dtype for Llama 3 models\n",
+    "    device_map=\"auto\"\n",
+    ")\n",
+    "\n",
+    "# --- STEP 2: Prepare Input ---\n",
+    "prompt = \"Tell me the steps to train a dog.\"\n",
+    "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "# --- STEP 3: Perform Forward Pass ---\n",
+    "with torch.no_grad():\n",
+    "    outputs = model(**inputs)\n",
+    "\n",
+    "# --- STEP 4: Extract Logits ---\n",
+    "logits = outputs.logits # Shape: (batch_size, sequence_length, vocab_size)\n",
+    "\n",
+    "# Logits for the NEXT token prediction (after the prompt)\n",
+    "next_token_logits = logits[0, -1, :] \n",
+    "\n",
+    "print(f\"Llama 3.2 Logits Shape: {logits.shape}\")\n",
+    "print(f\"Logits for the first prediction token shape: {next_token_logits.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b5f04906",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Model Layers: 28\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoConfig, AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "# Define the base Llama 3.2 model ID\n",
+    "MODEL_ID = \"meta-llama/Llama-3.2-3B-Instruct\"\n",
+    "\n",
+    "# --- Load the Tokenizer ---\n",
+    "# You must use the original tokenizer to maintain the same vocabulary and tokenization rules.\n",
+    "tokenizer = AutoTokenizer.from_pretrained(MODEL_ID)\n",
+    "\n",
+    "# --- Load the Configuration ---\n",
+    "# The configuration object holds the model's architecture parameters (like layer count, hidden size, etc.).\n",
+    "config = AutoConfig.from_pretrained(MODEL_ID)\n",
+    "\n",
+    "print(f\"Original Model Layers: {config.num_hidden_layers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b69ee5c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NEW_LAYERS = 6\n",
+    "config.num_hidden_layers = NEW_LAYERS\n",
+    "small_llama_model = AutoModelForCausalLM.from_config(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "2a27507b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------------------------------------\n",
+      "Vocabulary Size (must match original): 128256\n",
+      "Hidden Dimension (must match original): 3072\n",
+      "Number of layers in new model: 6\n",
+      "Total model parameters: 998,022,144\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"-\" * 50)\n",
+    "print(f\"Vocabulary Size (must match original): {config.vocab_size}\")\n",
+    "print(f\"Hidden Dimension (must match original): {config.hidden_size}\")\n",
+    "print(f\"Number of layers in new model: {len(small_llama_model.model.layers)}\")\n",
+    "print(f\"Total model parameters: {small_llama_model.num_parameters():,}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "09436e31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "en = load_dataset(\"allenai/c4\", \"en\", streaming=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f93c2905",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "84.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "kl_loss = torch.nn.KLDivLoss(reduction='batchmean')\n",
+    "optimizer = torch.optim.Adam(small_llama_model.parameters(), lr=1e-4)\n",
+    "\n",
+    "for elem in en[\"train\"]:\n",
+    "    optimizer.zero_grad()\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(**inputs)\n",
+    "    \n",
+    "    outputs_student = small_llama_model(**inputs)\n",
+    "\n",
+    "    loss = kl_loss(\n",
+    "        F.log_softmax(outputs_student.logits, dim=-1),\n",
+    "        F.softmax(outputs.logits, dim=-1)\n",
+    "    )\n",
+    "    print(loss.item())   \n",
+    "\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n"
    ]
   }
  ],
