--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -6497,12 +6497,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "268a1832",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = \"Tell me the steps\"\n",
+    "prompt = \"Tell me the steps to get a\"\n",
     "inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
     "\n",
     "# --- STEP 3: Perform Forward Pass ---\n",
@@ -6518,7 +6518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "6d949082",
    "metadata": {},
    "outputs": [],
@@ -6528,17 +6528,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "08d6d1f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\n\\n'"
+       "' dog'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
