--- a/text-zero.ipynb
+++ b/text-zero.ipynb
@@ -6564,7 +6564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.11"
+   "version": "3.12.11 | packaged by Anaconda, Inc. | (main, Jun  5 2025, 13:09:17) [GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
